<resources>
    <string name="app_name">ProyectoFinal</string>

    <string name="hint_email">Introduzca su email...</string>
    <string name="hint_password">Introduzca su contraseña...</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="tv_ubicacion">Nuestra ubicación (Google Maps)</string>
    <string name="tv_autor">Hecho por Victoriano García Torrecillas (ViGaTo)</string>

    <string name="btn_proveedores">Proveedores</string>
    <string name="btn_clientes">Clientes</string>
    <string name="btn_productos">Productos</string>
    <string name="btn_entradas">Entradas</string>
    <string name="btn_salidas">Salidas</string>
    <string name="btn_empleados">Empleados</string>
    <string name="btn_usuarios">Usuarios</string>

    <string name="btn_portal">Volver al portal</string>

    <string name="btn_admin_usuario">Usuario</string>
    <string name="btn_admin_administrador">Administrador</string>

    <string name="tv_usuario_viewmodel">Usuarios</string>
    <string name="hint_usuario">Usuario a introducir...</string>

    <string name="admin">Admin</string>
    <string name="usuario">User</string>

    <string name="activo">Activo</string>
    <string name="inactivo">Inactivo</string>

    <string name="tv_empleados">Empleados</string>
    <string name="tv_lista">No hay empleados registrados en el sistema</string>

    <string-array name="tipos">
        <item>Informático</item>
        <item>Gestión</item>
        <item>Administrativo</item>
        <item>Comercial</item>
        <item>Logística</item>
    </string-array>


    <string name="tv_titulo_empleado">Nuevo Empleado</string>
    <string name="tv_titulo_empleado_editar">Editar Empleado</string>
    <string name="tv_titulo_empleado_info">Información Empleado</string>
    <string name="hint_nombre_empleado">Nombre y apellidos...</string>
    <string name="hint_apellido_empleado">Apellidos...</string>
    <string name="hint_telefono_empleado">Teléfono...</string>
    <string name="hint_email_empleado">Email...</string>
    <string name="hint_ciudad_empleado">Ciudad...</string>
    <string name="hint_fecha_empleado">F. Nacimiento...</string>
    <string name="hint_estado_empleado">Estado...</string>
    <string name="hint_puesto_empleado">Puesto...</string>
    <string name="hint_salario_empleado">Salario...</string>
    <string name="hint_fecha_contratacion_empleado">F. Alta...</string>
    <string name="hint_fecha_baja_empleado">F. Baja...</string>
    <string name="hint_notas_empleado">Notas adicionales</string>
    <string name="cb_estado_empleado">Activo</string>

    <string name="tv_proveedor">Proveedores</string>
    <string name="tv_lista_proveedor">No hay proveedores registrados en el sistema</string>
    <string name="tv_titulo_proveedor">Nuevo Proveedor</string>
    <string name="tv_titulo_proveedor_editar">Editar Proveedor</string>
    <string name="tv_titulo_proveedor_info">Información Proveedor</string>
    <string name="hint_nombre_proveedor">Nombre...</string>
    <string name="hint_email_proveedor">Email...</string>
    <string name="hint_telefono_proveedor">Teléfono...</string>
    <string name="hint_direccion_proveedor">Dirección...</string>
    <string name="hint_ciudad_proveedor">Ciudad...</string>
    <string name="hint_calificacion_proveedor">Calificación</string>
    <string name="hint_notas_proveedor">Notas adicionales</string>
    <string name="cb_estado_proveedor">Activo</string>
    <string name="tv_entrada_proveedor">"Entradas del proveedor</string>
    <string name="tv_lista_entrada_proveedor">No hay entradas registradas en el sistema</string>

    <string name="tv_cliente">Clientes</string>
    <string name="tv_lista_cliente">No hay clientes registrados en el sistema</string>
    <string name="tv_titulo_cliente">Nuevo Cliente</string>
    <string name="tv_titulo_cliente_editar">Editar Cliente</string>
    <string name="tv_titulo_cliente_info">Información Cliente</string>
    <string name="hint_nombre_cliente">Nombre...</string>
    <string name="hint_email_cliente">Email...</string>
    <string name="hint_telefono_cliente">Teléfono...</string>
    <string name="hint_direccion_cliente">Dirección...</string>
    <string name="hint_ciudad_cliente">Ciudad...</string>
    <string name="hint_frecuencia_cliente">Frecuencia...</string>
    <string name="hint_notas_cliente">Notas adicionales</string>
    <string name="tv_salida_cliente">Salidas al cliente</string>
    <string name="tv_lista_salida_cliente">No hay salidas registradas en el sistema</string>

    <string-array name="frecuencia">
        <item>Semanal</item>
        <item>Mensual</item>
        <item>Anual</item>
    </string-array>

    <string name="tv_producto">Productos</string>
    <string name="tv_lista_producto">No hay productos registrados en el sistema</string>
    <string name="tv_titulo_producto_editar">Editar Producto</string>
    <string name="tv_titulo_producto_info">Información Producto</string>
    <string name="hint_nombre_producto">Nombre...</string>
    <string name="hint_categoria_producto">Categoría...</string>
    <string name="hint_precio_producto">Precio...</string>
    <string name="hint_cantidad_producto">Cantidad...</string>
    <string name="hint_descripcion_producto">Descripción...</string>
    <string name="btn_editar_producto">Editar</string>

    <string name="tv_entrada">Entradas</string>
    <string name="tv_lista_entrada">No hay entradas registradas en el sistema</string>
    <string name="tv_titulo_entrada">Nueva Entrada</string>
    <string name="tv_titulo_entrada_editar">Editar Entrada</string>
    <string name="tv_titulo_entrada_info">Información Entrada</string>
    <string name="hint_nombre_entrada">Nombre...</string>
    <string name="hint_fecha_entrada">Fecha...</string>
    <string name="hint_proveedor_entrada">Proveedor...</string>
    <string name="hint_producto_entrada">Producto...</string>
    <string name="hint_cantidad_entrada">Cantidad...</string>
    <string name="hint_precio_entrada">Precio...</string>
    <string name="hint_hora_entrada">Hora...</string>
    <string name="hint_notas_entrada">Notas adicionales</string>
    <string name="cb_estado_entrada">Terminada</string>

    <string name="tv_salida">Salidas</string>
    <string name="tv_lista_salida">No hay salidas registradas en el sistema</string>
    <string name="tv_titulo_salida">Nueva Salida</string>
    <string name="tv_titulo_salida_editar">Editar Salida</string>
    <string name="tv_titulo_salida_info">Información Salida</string>
    <string name="hint_nombre_salida">Nombre...</string>
    <string name="hint_fecha_salida">Fecha...</string>
    <string name="hint_cliente_salida">Cliente...</string>
    <string name="hint_producto_salida">Producto...</string>
    <string name="hint_cantidad_salida">Cantidad...</string>
    <string name="hint_precio_salida">Precio...</string>
    <string name="hint_hora_salida">Hora...</string>
    <string name="hint_notas_salida">Notas adicionales</string>
    <string name="cb_estado_salida">Terminada</string>

    <string name="tv_creado_por">Creado: </string>
    <string name="tv_modificado_por">Ultima modificación: </string>

    <string name="btn_pendiente">Pendientes</string>
    <string name="btn_completadas">Completadas</string>

    <string name="btn_nuevo">Nuevo</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_cancelar">Cancelar</string>
</resources>