<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    android:background="@color/fondo"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo"
        tools:context=".ui.main.FormularioEntradaActivity">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tv_titulo_entrada"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_nombre"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_nombre_entrada"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
            app:startIconDrawable="@drawable/baseline_assignment_returned_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_producto_entrada"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_producto_entrada"
            app:boxBackgroundMode="outline"
            app:endIconMode="dropdown_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_nombre"
            app:startIconDrawable="@drawable/baseline_storefront_24">

            <AutoCompleteTextView
                android:id="@+id/et_producto_entrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_proveedor"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_proveedor_entrada"
            app:boxBackgroundMode="outline"
            app:endIconMode="dropdown_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_producto_entrada"
            app:startIconDrawable="@drawable/baseline_fire_truck_24">

            <AutoCompleteTextView
                android:id="@+id/et_proveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_cantidad"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_cantidad_entrada"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@+id/tl_precio"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_proveedor"
            app:startIconDrawable="@drawable/baseline_add_shopping_cart_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_precio"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_precio_entrada"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="@+id/tl_cantidad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tl_cantidad"
            app:layout_constraintTop_toTopOf="@+id/tl_cantidad"
            app:startIconDrawable="@drawable/baseline_euro_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_hora_entrada"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hora_entrada"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="@+id/tl_fecha_entrada"
            app:layout_constraintEnd_toStartOf="@+id/tl_fecha_entrada"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tl_fecha_entrada"
            app:startIconDrawable="@drawable/baseline_access_time_filled_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_hora_entrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_fecha_entrada"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_fecha_entrada"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tl_hora_entrada"
            app:layout_constraintTop_toBottomOf="@+id/tl_precio"
            app:startIconDrawable="@drawable/baseline_calendar_today_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fecha_entrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_notas"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_notas_entrada"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_fecha_entrada"
            app:startIconDrawable="@drawable/baseline_notes_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_notas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbActivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/cb_estado_entrada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_notas" />

        <Button
            android:id="@+id/btn_aceptar"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/btn_confirmar"
            app:icon="@drawable/baseline_check_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancelar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbActivo" />

        <Button
            android:id="@+id/btn_cancelar"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F44336"
            android:text="@string/btn_cancelar"
            app:icon="@drawable/baseline_cancel_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_aceptar"
            app:layout_constraintTop_toBottomOf="@+id/cbActivo" />

        <Button
            android:id="@+id/btn_volver_formulario"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F44336"
            android:text="@string/btn_volver"
            android:enabled="false"
            android:visibility="invisible"
            android:clickable="false"
            app:icon="@drawable/baseline_keyboard_return_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbActivo" />

        <TextView
            android:id="@+id/tv_creado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:enabled="false"
            android:visibility="invisible"
            android:clickable="false"
            android:text="@string/tv_creado_por"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_notas" />

        <TextView
            android:id="@+id/tv_autor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:text="TextView"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/tv_creado"
            app:layout_constraintStart_toEndOf="@+id/tv_creado"
            app:layout_constraintTop_toTopOf="@+id/tv_creado" />

        <TextView
            android:id="@+id/tv_ultimaModificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/tv_modificado_por"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_autor" />

        <TextView
            android:id="@+id/tv_ultimoAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:text="TextView"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/tv_ultimaModificacion"
            app:layout_constraintStart_toEndOf="@+id/tv_ultimaModificacion"
            app:layout_constraintTop_toTopOf="@+id/tv_ultimaModificacion" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>